<resources>
    <string name="app_name">Pomodoro</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="classic">Classic</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">play</string>
</resources>